[tool.poetry]
name = "ars0n_python_packages"
version = "0.1.0"
description = ""
authors = ["rs0n <rs0n@ars0nsecurity.com>"]

[tool.poetry.dependencies]
python = "^3.12.0"
flask-cors = "*"
requests = "*"
dnspython = "*"
termcolor = "*"
htmlmin = "*"
tldextract = "*"
colorama = "*"
cffi = "*"
beautifulsoup4 = "*"
argparse = "*"
texttable = "*"
keyboard = "*"
goop = "*"
lockfile = "*"
Unidecode = "*"
colored = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"